--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,5 +14,6 @@
  *= require_directory .
  *= require_self
  */
+@import "bootstrap"
+@import "bootstrap-sprockets"
 
-@import "bootstrap-sprockets";
