--- a/app/views/greetings/goodbye.html.erb
+++ b/app/views/greetings/goodbye.html.erb
@@ -1,3 +1,3 @@
 <h1>Bye!</h1>
 <p><%=@message %></p>
-<a href="/greetings/hello">Hello!</a>
+<a class="btn btn-success" href="/greetings/hello">Hello!</a>
