--- a/app/views/greetings/hello.html.erb
+++ b/app/views/greetings/hello.html.erb
@@ -1,7 +1,8 @@
 <h1>A Greetings for You!</h1>
 <p><%=@message %></p>
 <p>Now is <span id='time'></span></p>
-<a class='btn btn-success' href="/greetings/goodbye">Good Bye!</a>
+<p><a class='btn btn-success' href="/greetings/goodbye">Good Bye!</a></p>
+<p><a class='btn btn-primary' href="/high_scores">Manage High Score</a></p>
 
 
 <script>
