--- a/app/views/high_scores/edit.html.erb
+++ b/app/views/high_scores/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @high_score %> |
-<%= link_to 'Back', high_scores_path %>
+<%= link_to 'Show', @high_score ,:class =>"btn btn-primary"%>
+<%= link_to 'Back', high_scores_path ,:class =>"btn btn-default"%>
