--- a/app/views/high_scores/show.html.erb
+++ b/app/views/high_scores/show.html.erb
@@ -10,5 +10,5 @@
   <%= @high_score.score %>
 </p>
 
-<%= link_to 'Edit', edit_high_score_path(@high_score) %> |
-<%= link_to 'Back', high_scores_path %>
+<%= link_to 'Edit', edit_high_score_path(@high_score) ,:class =>"btn btn-primary"%>
+<%= link_to 'Back', high_scores_path ,:class =>"btn btn-default"%>
