--- a/app/views/high_scores/_form.html.erb
+++ b/app/views/high_scores/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_for(@high_score) do |f| %>
+<%= form_for(@high_score,:html=>{:class=>"form-horizontal"}) do |f| %>
   <% if @high_score.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" >
       <h2><%= pluralize(@high_score.errors.count, "error") %> prohibited this high_score from being saved:</h2>
 
       <ul>
@@ -10,16 +10,24 @@
       </ul>
     </div>
   <% end %>
+  
 
-  <div class="field">
-    <%= f.label :game %><br>
-    <%= f.text_field :game %>
+    <div class="form-group field">
+    <%= f.label :game ,:class=>"control-label col-sm-2"%>
+    <div class="col-sm-10">
+      <%= f.text_field :game ,:class=>"form-control",:style=>"max-width:40%"%>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :score %><br>
-    <%= f.number_field :score %>
+  <div class="form-group field">
+    <%= f.label :score ,:class=>"control-label col-sm-2"%>
+     <div class="col-sm-10">
+      <%= f.number_field :score ,:class=>"form-control",:style=>"max-width:40%" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group actions">
+    
+    <%= f.submit :class=>"btn btn-success",:style=>"margin-left:20%" %>
   </div>
+
+
 <% end %>
