--- a/app/views/high_scores/new.html.erb
+++ b/app/views/high_scores/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', high_scores_path %>
+<%= link_to 'Back', high_scores_path, :class =>"btn btn-default"  %>
